# Task-Manager

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: Makefile  asgi.py  settings.py  translation.py  urls.py  views.py  wsgi.py
task_manager/labels/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: test_labels_crud.py  test_labels_response.py
task_manager/static/css/: home.css
task_manager/statuses/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_status_created_at.py  0003_rename_name_status_title.py  0004_rename_title_status_name.py
task_manager/statuses/tests/: test_statuses_crud.py  test_statuses_views.py
task_manager/task_manager/: settings.py  urls.py  views.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_remove_task_label_task_label.py  0002_rename_name_task_title_remove_task_created_at_and_more.py  0003_alter_task_label.py  0003_task_created_at_task_status.py  0004_alter_task_executor.py  0004_task_author_task_customer.py  0005_rename_label_task_labels.py  0005_task_description.py  0006_rename_customer_task_executor.py  0008_task_labels.py  (+3 more)
task_manager/templates/: 403.html  base.html  forms.html  home.html  table.html  task.html
task_manager/users/: forms.py  models.py  urls.py  views.py
task_manager/utils/: utils_classes.py
(+13 files in other folders)
